[gd_scene load_steps=2 format=3 uid="uid://oxacnte0u3cu"]

[ext_resource type="Script" path="res://Interactable.gd" id="1_6tynf"]

[node name="Interactable" type="Area2D"]
script = ExtResource("1_6tynf")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
